# ryto

./: .gitignore  Cargo.toml  README.md  justfile
docs/: example.input
src/: lib.rs  main.rs
src/ayto/: accessors.rs  constructor.rs  io.rs  mod.rs  mutators.rs  solvers.rs  types.rs  worldview.rs
